objects/tffa__StipulationItem__c.object
<CustomObject>
    <description>Holds a reference to a stipulation template.</description>
    <fields>
        <fullName>tffa__Checklist__c</fullName>
        <description>Reference to parent checklist</description>
        <label>Checklist</label>
        <referenceTo>tffa__StipulationChecklist__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the stipulation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RequiredOnApplicationStatus__c</fullName>
        <description>Indicates the condition on which current stipulation is to be made mandatory</description>
        <label>Required on application status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether mandatory</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to stipulation template.</description>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Template not active.</errorMessage>
            <filterItems>
                <field>tffa__StipulationTemplate__c.tffa__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__StipulationTemplate__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Stipulation Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stipulation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>